# gpt-cli-dummy

./: README.md  cli.py  pyproject.toml
assets/: context.txt
